Fix issue with icon not aligning to text

--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@
 }
 
 #sidebar-header ul {
+  display: flex;
   list-style: none;
   padding-left: 0;
   float: left;
@@ -47,6 +48,11 @@
 }
 
 #sidebar-header li {
+  display: grid;
+  grid-template-columns: 0.5fr 0.5fr;
+  font-size: 1.5em;
+  font-weight: 500;
+  align-items: center;
 }
 
 #sidebar-header svg {
@@ -54,6 +60,10 @@
   margin-right: 2%;
   width: 50px;
   height: 50px;
+}
+
+#sidebar-header p {
+  padding-left: 5%;
 }
 
 .content {
